search-box with placeholders

--- a/index.html
+++ b/index.html
@@ -1,4 +1,36 @@
-<!doctype html>
-<title></title>
-<main></main>
-<script src="/bundle.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>CodeCasts</title>
+        <link rel="stylesheet" href="stylesheet.css">
+    </head>
+    <body>
+        <!-- <div id="wrapper"> -->
+            <form class="search">
+                <input id="search-box" type="text" name="search-box" placeholder="Search for Lessons and Courses">
+                <button id="search-button" type="button" name="search-button">
+                    <img id="icon" src="https://cdn0.iconfinder.com/data/icons/20-flat-icons/128/search.png" alt="search-icon">
+                </button>
+            </form>
+
+            <div id="container">
+                <div>image 1</div>
+                <div>image 2</div>
+                <div>image 3</div>
+                <div>image 4</div>
+                <div>image 5</div>
+                <div>image 6</div>
+                <div>image 7</div>
+                <div>image 8</div>
+                <div>image 9</div>
+                <div>image 10</div>
+                <div>image 11</div>
+                <div>image 12</div>
+            </div>
+
+        <!-- </div> -->
+
+        <script src="/bundle.js"></script>
+    </body>
+</html>
